Bug 1954490 - Improve contrast between active tab and tabstrip. r=desktop-theme-reviewers,reusable-components-reviewers,emilio,mstriemer
Differential Revision: https://phabricator.services.mozilla.com/D243454

--- a/browser/themes/shared/browser-colors.css
+++ b/browser/themes/shared/browser-colors.css
@@ -109,12 +109,12 @@
 
     /* stylelint-disable-next-line media-query-no-invalid */
     @media not ((-moz-windows-mica) or ((-moz-windows-accent-color-in-titlebar) and -moz-pref("browser.theme.windows.accent-color-in-tabs.enabled"))) {
-      --toolbox-bgcolor: light-dark(rgb(240, 240, 244), rgb(28, 27, 34));
+      --toolbox-bgcolor: light-dark(rgb(234, 234, 237), rgb(28, 27, 34));
       --toolbox-textcolor: light-dark(rgb(21, 20, 26), rgb(251, 251, 254));
       --toolbox-bgcolor-inactive: var(--toolbox-bgcolor);
       --toolbox-textcolor-inactive: var(--toolbox-textcolor);
       &:where([customtitlebar]) {
-        --toolbox-bgcolor-inactive: light-dark(rgb(235, 235, 239), rgb(31, 30, 37));
+        --toolbox-bgcolor-inactive: light-dark(rgb(240, 240, 244), rgb(31, 30, 37));
       }
     }
 
